--- a/SADX-SMPS-Mod/SADX-SMPS-Mod.vcxproj
+++ b/SADX-SMPS-Mod/SADX-SMPS-Mod.vcxproj
@@ -84,6 +84,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InvincibilityMusicManager.h" />
     <ClInclude Include="ShoeTempoManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -97,6 +98,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="InvincibilityMusicManager.cpp" />
     <ClCompile Include="SADX-SMPS-Mod.cpp" />
     <ClCompile Include="ShoeTempoManager.cpp" />
     <ClCompile Include="stdafx.cpp">
